TEST_PROGRAMS/VALID/teng_long/sqrt.min

# Compute sqrt(x) (square root of x)

var x : float;
var guess : float;
var quot : float;
var iter : int;

read x;
if x then
  print "Good input";
endif
if -x then
  print "Bad input";
endif

guess = 1.;
iter = 10;

while iter do
  quot = x / guess;
  guess = 0.5 * (guess + quot);
  iter = iter - 1;
done

print "Sqrt of " + (guess * guess) + " is equal to " + guess;

